--- a/scss/blocks/_section2.scss
+++ b/scss/blocks/_section2.scss
@@ -1,9 +1,13 @@
 .section2 {
+    height: 700px;
     position: relative;
-    height: 480px;
-    background-color: #333D4B;
-    border-radius: 10px;
-    padding: 60px 0 0 0;
+    &__container {
+        height: 480px;
+        background-color: #333D4B;
+        border-radius: 10px;
+        padding: 60px 0 0 0;
+        
+    }
     &__title {
         font-size: 40px;
         font-weight: 900;
@@ -20,7 +24,7 @@
         position: absolute;
         display: flex;
         gap: 25px;
-        bottom: -180px;
+        bottom: 140px;
         left: 70px;
     }
     &__box {
@@ -51,7 +55,10 @@
 
 @media screen and (max-width: 400px) {
     .section2 {
-        height: 800px;
+        height: 1600px;
+        &__container {
+            height: 900px;
+        }
         &__text {
             width: 300px;
             font-size: 15px;
@@ -60,7 +67,10 @@
         &__wrapper {
             flex-wrap: wrap;
             top: 330px;
-            left: 10px;
+            left: 20px;
+        }
+        &__box {
+            width: 95%;
         }
     }
 }
