--- a/scss/main.css
+++ b/scss/main.css
@@ -180,7 +180,10 @@ li {
   }
 }
 .section2 {
+  height: 700px;
   position: relative;
+}
+.section2__container {
   height: 480px;
   background-color: #333D4B;
   border-radius: 10px;
@@ -202,7 +205,7 @@ li {
   position: absolute;
   display: flex;
   gap: 25px;
-  bottom: -180px;
+  bottom: 140px;
   left: 70px;
 }
 .section2__box {
@@ -230,7 +233,10 @@ li {
 
 @media screen and (max-width: 400px) {
   .section2 {
-    height: 800px;
+    height: 1600px;
+  }
+  .section2__container {
+    height: 900px;
   }
   .section2__text {
     width: 300px;
@@ -240,6 +246,9 @@ li {
   .section2__wrapper {
     flex-wrap: wrap;
     top: 330px;
-    left: 10px;
+    left: 20px;
+  }
+  .section2__box {
+    width: 95%;
   }
 }/*# sourceMappingURL=main.css.map */
