--- a/scss/blocks/_section3.scss
+++ b/scss/blocks/_section3.scss
@@ -1,5 +1,5 @@
 .section3 {
-    height: 900px;
+    height: 700px;
     margin: 180px auto;
     &__title {
         color: #83888F;
@@ -46,5 +46,32 @@
     }
     &__btn {
         margin: 80px 0 0 75px;
+    }
+}
+
+
+
+@media screen and (max-width: 400px) {
+    .section3 {
+        width: 100%;
+        padding: 20px;
+        &__title {
+            text-align: center;
+            margin: 0;
+        }
+        &__dots-wrapper {
+            display: none;
+        }
+        &__wrapper {
+            flex-wrap: wrap;
+            margin: 70px 0 0 0;
+        }
+        &__box {
+            width: 100%;
+            text-align: center;
+            &-title {
+                width: 100%;
+            }
+        }
     }
 }
