--- a/css/main.css
+++ b/css/main.css
@@ -334,6 +334,7 @@ li {
 @media screen and (max-width: 400px) {
   .section3 {
     width: 100%;
+    height: 1350px;
     padding: 20px;
   }
   .section3__title {
@@ -379,6 +380,29 @@ li {
 .footer__icons .fa-brands {
   font-size: 24px;
   color: #fff;
+}
+
+@media screen and (max-width: 400px) {
+  .footer {
+    width: 100%;
+    height: 360px;
+  }
+  .footer__wrapper {
+    display: block;
+  }
+  .footer__img {
+    margin: 50px 0 0 70px;
+  }
+  .footer__list {
+    display: block;
+    text-align: center;
+  }
+  .footer__list-item {
+    margin: 20px 0;
+  }
+  .footer__icons {
+    margin: 50px 0 0 130px;
+  }
 } 
 
 /*# sourceMappingURL=main.css.map */
