--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -19,3 +19,27 @@
         }
     }
 }
+
+
+@media screen and (max-width: 400px) {
+    .footer {
+        width: 100%;
+        height: 360px;
+        &__wrapper {
+            display: block;
+        }
+        &__img {
+            margin: 50px 0 0 70px;
+        }
+        &__list {
+            display: block;
+            text-align: center;
+            &-item {
+                margin: 20px 0;
+            }
+        }
+        &__icons {
+            margin: 50px 0 0 130px;
+        }
+    }
+}
