--- a/scss/blocks/_section3.scss
+++ b/scss/blocks/_section3.scss
@@ -54,6 +54,7 @@
 @media screen and (max-width: 400px) {
     .section3 {
         width: 100%;
+        height: 1350px;
         padding: 20px;
         &__title {
             text-align: center;
